# 3dDensity

./: .codecov.yml  README.md  setup.cfg  setup.py
.circleci/: config.yml
3dDensity/: 3dDensity.py  _version.py
3dDensity/cli/: __init__.py  run.py
3dDensity/tests/: conftest.py  test_integration.py
Density3D/: Density3D.py  __init__.py  _version.py
Density3D/cli/: __init__.py  run.py
Density3D/tests/: conftest.py  test_integration.py
denvol/: _version.py  denvol.py
denvol/cli/: __init__.py  run.py
denvol/tests/: test_integration.py
