[metadata]
name = 3dDensity
url = https://github.com/eurunuela/3dDensity
download_url = https://github.com/eurunuela/3dDensity
author = Eneko Uruñuela
maintainer = Eneko Uruñuela
maintainer_email = e.urunuela@bcbl.eu
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
license = Apache-2.0
description = Python library to convert physiological data files into BIDS format
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
platforms = OS Independent
provides =
    3dDensity

[options]
python_requires = >=3.6.1
install_requires =
    numpy >=1.9.3, !=*rc*
    matplotlib >=3.1.1, !=3.3.0rc1
    nilearn
    tqdm
tests_require =
    pytest >=5.3
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
doc =
    sphinx >=2.0
    sphinx-argparse
    sphinx_rtd_theme
style =
    flake8 >=3.7
    flake8-docstrings >=1.5
test =
    pytest >=5.3
    pytest-cov
    %(doc)s
    %(style)s
all =
    %(doc)s
    %(style)s
    %(test)s

[options.entry_points]
console_scripts =
    3dDensity=3dDensity.3dDensity:_main

[flake8]
exclude=
    *build/
    tests
ignore = E126, E402, W503
max-line-length = 99
per-file-ignores =
    */__init__.py:F401

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx

[versioneer]
VCS = git
style = pep440
versionfile_source = 3dDensity/_version.py
versionfile_build = 3dDensity/_version.py
tag_prefix =
parentdir_prefix =
